deployments/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
spec:
  ports:
  - port: 5672
    name: port-5672
    protocol: TCP
    targetPort: 5672
  - port: 4369
    name: port-4369
    protocol: TCP
    targetPort: 4369
  - port: 5671
    name: port-5671
    protocol: TCP
    targetPort: 5671
  - port: 15672
    name: port-15672
    protocol: TCP
    targetPort: 15672
  - port: 25672
    name: port-25672
    protocol: TCP
    targetPort: 25672
  selector:
    app: rabbitmq
