deployments/rabbitmq/traefik-lb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-rabbitmq-route
spec:
  rules:
  - host: rabbitmq.ui.ckmro.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rabbitmq
          servicePort: 15672
